Fixed segfault in test while running CTest
Running tests directly from the executable would result in all tests
passing and a clean exit, but CTest would fail to execute all of "Can
instantiate compounds" and would segfault. Reason was that `multiType`
was being used in `nestedType` but only `nestedType` was registered in
that test case. When running all tests in one go this was not an
error (a previous test had registered it) but as CTest runs each test
sequentially in a different process, the `multiType` had not been
registered.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,6 @@ add_compile_options(-Wall -Wextra -std=c++17)
 add_library(Runtype INTERFACE)
 target_include_directories(Runtype INTERFACE include)
 
-enable_testing()
+include(CTest)
 add_subdirectory(test)
 add_subdirectory(libs/catch)
